rename of images

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                 <h2>Чем мы занимаемся</h2>
                 <ul>
                     <li>
-                        <img src="./imades/img.jpg" alt="наша-работа-1" width="370">
+                        <img src="./imades/work.jpg" alt="наша-работа-1" width="370">
                     </li>
                     <li>
-                        <img src="./imades/img2.jpg" alt="наша-работа-2" width="370">
+                        <img src="./imades/work2.jpg" alt="наша-работа-2" width="370">
                     </li>
                     <li>
-                        <img src="./imades/img3.jpg" alt="наша-работа-3" width="370">
+                        <img src="./imades/work3.jpg" alt="наша-работа-3" width="370">
                     </li>
                 </ul>
             </section>
