--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
+        <a href="#">WebStudio</a>
         <nav>
-            <a href="#">WebStudio</a>
             <ul>
                 <li>
-                    <a href="">Студия</a>
+                    <a href="#">Студия</a>
                 </li>
                 <li>
-                    <a href="">Портфолио</a>
+                    <a href="#">Портфолио</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a href="#">Контакты</a>
                 </li>
             </ul>
          </nav>
@@ -80,22 +80,22 @@
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
-                        <img src="./imades/igor.jpg" alt="фото дизайнера">
+                        <img src="./imades/igor.jpg" alt="фото дизайнера" width="270">
                         <h3>Игорь Демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="./imades/olga.jpg" alt="форо разработчика">
+                        <img src="./imades/olga.jpg" alt="форо разработчика" width="270">
                         <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./imades/nikolay.jpg" alt="фото маркетинг менеджера">
+                        <img src="./imades/nikolay.jpg" alt="фото маркетинг менеджера" width="270">
                         <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="./imades/mikhail.jpg" alt="фото UI дизайнера">
+                        <img src="./imades/mikhail.jpg" alt="фото UI дизайнера" width="270">
                         <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
                     </li>
@@ -104,18 +104,18 @@
      </main>
 
     <footer>
-                <a href="#">WebStudio</a>
-                <address>
-                    г. Киев, пр-т Леси Украинки, 26
-                </address>
-        <ul>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-        </ul>
+        <a href="#">WebStudio</a>
+            <address>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li>
+                        <a href="mailto:info@example.com">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
     </footer>
 </body>
 </html>
